--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -27,25 +27,33 @@ button{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-right: 20px;
+    text-align:center;
+    font-size:14px;
+    font-weight: bold;
+    margin-right:30px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
+.box-text{
+    line-height:40px;
+    text-align:center;
+}
+.strong{
+    font-size:18pt;
+}
+
 
 .box{
-    width: 80px;
+    width: 120px;
     height: 80px;
     background-color: #eae9e9;
+    border-radius: 8px;
 }
-
-.box-alert{
-    width: 80px;
-    height: 80px;
+.alert{
     background-color: #ea0d0d;
 }
-
-.box-inProg{
-    width: 80px;
-    height: 80px;
-    background-color: #e3dfb1;
+.inProg{
+    background-color: #dfdbab;
 }
 
 .post-table, .comment-table {
@@ -60,9 +68,10 @@ button{
     text-align: center;
 }
 
+
 .post-table td {
     padding: 10px;
-    border: 1px solid #e0e0e0;
+    text-align: center;
 }
 
 .icon {
@@ -70,19 +79,103 @@ button{
     cursor: pointer;
 }
 
-.comment-cell {
-    padding: 0;
+.emergency{
+    color:#ea0d0d
 }
 
-.comment-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.comment-table td {
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+  }
+/*
+.memo-td {
     padding: 10px;
     border-top: none;
-    border-left: 1px solid #e0e0e0;
+    border-left: none;
     border-right: 1px solid #e0e0e0;
     border-bottom: 1px solid #e0e0e0;
 }
+*/
+
+.modal-bg{
+    width:100%;
+    height:100%;
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    background:rgba(0,0,0,0.6);
+    z-index: 10;
+}
+
+.icon-addMemo{
+    background: #1aaf31;
+}
+.icon-remove{
+    background:#ea0d0d
+}
+
+.modal-overlay{
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.modal {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 500px;
+    z-index:100;
+  }.input-group {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }.input-label {
+    display: block;
+    width: 60px; 
+    text-align: right; 
+    margin-right: 10px;
+}.modal-buttons{
+    display: flex;
+    justify-content: space-between; 
+}.modal-button{
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 2px 5px;
+    border-radius: 4px;
+    cursor: pointer;
+    flex: 1; 
+    margin: 0 10px; 
+}
+.label-radio{
+    display: inline-block;
+  border: 2px solid #007BFF;
+  color: #007BFF;
+  padding: 5px 15px;
+  margin-right: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  transition: background-color 0.3s, color 0.3s;
+}.label-radio:hover {
+    background-color: #007BFF;
+    color: white;
+  }.label-radio input[type="radio"] {
+    display:none;
+}.label-radio input[type="radio"]:checked{
+    background-color: #007BFF;
+    color: white;
+  }
+  
