--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -52,9 +52,8 @@ body {
 }
 
 .container {
-    display: flex;
+    padding: 105px 0 0;
 }
-
 .btn-common{
     font-family: 'IBM Plex Sans KR', sans-serif;
     border: none;
@@ -89,11 +88,24 @@ body {
     'opsz' 24;
     vertical-align: middle;
 }
+table td.no-db{
+    background: transparent;
+    box-shadow: none;
+}
 
 /* header */
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 0 20px;
+    background: #fff;
+    z-index: 99;
+}
 .header-container {
     display:flex;
-    height: 10vh;
+    padding: 30px 0;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #ddd;
@@ -126,7 +138,7 @@ body {
     left:0;
     right:0;
     background:rgba(0,0,0,0.6);
-    z-index: 10;
+    z-index: 999;
 }
 .modal-overlay{
     position: fixed;
@@ -226,10 +238,13 @@ body {
 
 /* list view */
 .sidebar {
+    position: fixed;
+    top: 150px;
     text-align:center;
     font-size:15px;
     font-weight: 500;
-    margin: 45px 30px 0 0;
+    background: #fff;
+    z-index: 9;
 }
 .sidebar .box{
     margin: 0 0 20px;
@@ -240,7 +255,7 @@ body {
 .box .box-text{
     display: block;
     min-width: 130px;
-    padding: 15px;
+    padding: 10px 5px;
     box-sizing: border-box;
 }
 .box .box-text .strong{
@@ -259,8 +274,9 @@ body {
 
 /* list table */
 .table-wrap{
-    width: 100%;
+    width: calc(100% - 150px);
     padding: 0 0 20px;
+    margin: 0 0 0 150px;
 }
 
 .post-table{
@@ -277,14 +293,20 @@ body {
     padding: 10px;
     text-align: center;
     vertical-align: middle;
+    font-size: 14px;
+    border-radius: 5px;
 }
 .post-table th {
-    font-size: 15px;
     font-weight: 500;
+    position: sticky;
+    top: 105px;
+    background: #fff;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.2);
 }
 .post-table td{
+    padding: 5px 10px;
+    line-height: 18px;
     background: #f5f5f5;
-    border-radius: 5px;
     box-shadow: 0px 2px 2px rgba(0,0,0,0.2);
 }
 .post-table td.status{
@@ -294,8 +316,8 @@ body {
     background: #f9ffbe;
 }
 .post-table tr.memo td{
-    padding: 5px 10px;
-    font-size: 15px;
+    padding: 2px 10px;
+    font-size: 14px;
     background: transparent;
     box-shadow: none;
 }
@@ -329,8 +351,13 @@ body {
 @media screen and (max-width:1024px) {
     .container{
         display: block;
+        padding: 220px 0 0;
     }
     .sidebar{
+        position: fixed;
+        top: 100px;
+        left: 20px;
+        right: 20px;
         display: flex;
         margin: 0;
         padding: 20px 0 24px;
@@ -351,8 +378,16 @@ body {
         text-align: right;
     }
 
+    .table-wrap{
+        width: 100%;
+        margin: 0;
+    }
+
+    .post-table th{
+        top: 218px;
+    }
     .post-table th, .post-table td{
-        font-size: 14px;
+        font-size: 13px;
     }
     .post-table tr.memo td{
         font-size: 13px;
@@ -366,6 +401,10 @@ body {
     }
 }
 @media screen and (max-width:640px) {
+    .container{
+        padding: 205px 0 0;
+    }
+
     .header-container{
         display: block;
         height: auto;
@@ -386,11 +425,16 @@ body {
     .header-container .item h1{
         text-align: left;
         margin: 0 0 10px;
+        font-size: 20px;
     }
     .header-container .item > p{
+        font-size: 16px;
         word-break: keep-all;
     }
 
+    .sidebar{
+        top: 85px;
+    }
     .sidebar .box{
         flex: 1;
         max-width: 130px;
@@ -402,7 +446,37 @@ body {
     .table-wrap{
         overflow-x: auto;
     }
+    .post-table th{
+        position: relative !important;
+        top: auto !important;
+    }
 }
-@media screen and (max-width:480px) {
+@media screen and (max-height:480px){
+    .header-container{
+        padding: 10px 0;
+    }
+
+}
+@media screen and (min-width:1025px) and (max-height:480px) {
+    .container{
+        padding: 65px 0 0;
+    }
+    .sidebar{
+        top: 110px;
+    }
+    .post-table th{
+        top: 65px;
+    }
     
+}
+@media screen and (max-width:1024px) and (max-height:480px) {
+    .container{
+        padding: 180px 0 0;
+    }
+    .sidebar{
+        top: 62px;
+    }
+    .post-table th{
+        top: 180px;
+    }
 }
