--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -345,6 +345,26 @@ header{
     color: #ff3131;
 }
 
+.btn-delete-memo{
+    padding: 3px 5px 1px;
+    margin: 0 0 0 10px;
+    font-family: 'IBM Plex Sans KR', sans-serif;
+    font-weight: 500;
+    line-height: 1;
+    color: #333;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    background-color: #f5f5f5;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transition: .2s;
+}
+.memo-td.txt-left:hover .btn-delete-memo{
+    opacity: 1;
+    visibility: visible;
+}
+
 
 /* responsive view */
 
