--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -253,9 +253,6 @@ header{
 }
 .sidebar .box{
     margin: 0 0 20px;
-    background-color: #f3f3f3;
-    border-radius: 8px;
-    box-shadow: 1px 3px 5px rgba(0,0,0,.25);
 }
 .box .box-text{
     display: block;
@@ -264,18 +261,17 @@ header{
     font-family: 'IBM Plex Sans KR', sans-serif;
     font-size: 15px;
     line-height: 1;
-    background: transparent;
-    border: 5px solid transparent;
+    background-color: #f3f3f3;
+    border: none;
     border-radius: 8px;
+    box-shadow: 1px 3px 5px rgba(0,0,0,.25);
     box-sizing: border-box;
     cursor: pointer;
+    transition: .3s;
 }
-.box .box-text.active{
-    border: 5px inset rgba(255,255,255,.5);
-    box-shadow: 2px 5px 2px rgba(0,0,0,.3);
-}
-.box.alert .box-text.active{
-    border-color: rgba(0,0,0,.5);
+.box .box-text.active, .box .box-text:hover{
+    transform: translateY(-10px);
+    box-shadow: 0px 12px 5px rgba(0,0,0,.3);
 }
 .box .box-text .strong{
     display: block;
@@ -284,10 +280,10 @@ header{
     font-weight: 700;
 }
 
-.box.alert{
+.box.alert .box-text{
     background-color: #ff3131;
 }
-.box.inProg{
+.box.inProg .box-text{
     background-color: #f9ffbe;
 }
 
