--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -106,21 +106,22 @@ header{
 }
 .header-container {
     display:flex;
-    padding: 30px 0;
+    padding: 26px 0;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #ddd;
 }
 
 .item{
+    text-align: center;
     font-size: 18px;
     font-weight: 500;
 }
 .item h1{
     width: 130px;
+    padding: 0 0 10px;
     font-size: 24px;
     font-weight: 700;
-    text-align: center;
 }
 .item .post-add{
     padding: 10px;
@@ -211,6 +212,23 @@ header{
     color: white;
 }
 
+.input-status .label-radio input[value="1"] + span{
+    border-color: #c0cd3d;
+    color: #c0cd3d;
+}
+.input-status .label-radio input[value="2"] + span{
+    border-color: #64b752;
+    color: #64b752;
+}
+.input-status .label-radio input[value="1"] + span:hover, .input-status .label-radio input[value="1"]:checked + span{
+    background-color: #c0cd3d;
+    color: #fff;
+}
+.input-status .label-radio input[value="2"] + span:hover, .input-status .label-radio input[value="2"]:checked + span{
+    background-color: #64b752;
+    color: #fff;
+}
+
 .label-text{
     width: calc(100% - 70px);
 }
@@ -224,6 +242,9 @@ header{
 }
 .label-text textarea{
     resize: none;
+}
+.label-text input[type="text"]{
+    width: calc(50% - 75px);
 }
 .label-text > span{
     margin: 0 0 0 5px;
@@ -299,7 +320,7 @@ header{
 .col02{width:12%;min-width:100px;}
 .col03{flex:1;}
 .col04{width:8%;min-width:62px;}
-.col05{width:10%;min-width:100px;}
+.col05{width:10%;min-width:102px;}
 .col06{width:8%;min-width:62px;}
 .col07{width:10%;}
 /**/
@@ -434,7 +455,7 @@ header{
 @media screen and (max-width:1024px) {
     .container{
         display: block;
-        padding: 220px 0 0;
+        padding: 210px 0 0;
     }
     .sidebar{
         position: fixed;
@@ -467,7 +488,7 @@ header{
     }
 
     .post-table .table-head{
-        top: 220px;
+        top: 210px;
     }
     .post-table .table-head > li,
     .post-table .table-body .list-wrap > p,
@@ -496,7 +517,7 @@ header{
     .header-container{
         display: block;
         height: auto;
-        padding: 20px 0;
+        padding: 10px 0;
         position: relative;
     }
     .header-container .item{
@@ -512,8 +533,13 @@ header{
     }
     .header-container .item h1{
         text-align: left;
-        margin: 0 0 10px;
+        margin: 0 0 5px;
+        padding: 0;
         font-size: 20px;
+    }
+    .header-container .item h2{
+        margin: 0 0 10px;
+        font-size: 16px;
     }
     .header-container .item > p{
         font-size: 16px;
