--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -271,51 +271,77 @@ header{
 }
 .label-radio span{
     display: inline-block;
-    border: 2px solid #007BFF;
-    color: #007BFF;
+    min-width: 25px;
     padding: 5px 15px;
+    text-align: center;
     font-size: 14px;
+    border: 2px solid;
     border-radius: 5px;
     cursor: pointer;
     transition: .3s;
 }
-.label-radio input[value="2"] + span{
-    border-color: #ff3131;
-    color: #ff3131;
+
+/* radio button color */
+input[name="postCd"] + span, input[name="afterCd"] + span{
+    border-color: #007BFF;
+    color: #007BFF;
 }
-.label-radio span:hover {
+input[name="postCd"] + span:hover, input[name="postCd"]:checked + span,
+input[name="afterCd"] + span:hover, input[name="afterCd"]:checked + span{
+    border-color: #007BFF;
     background-color: #007BFF;
     color: white;
 }
-.label-radio input[value="2"] + span:hover{
-    background-color: #ff3131;
+input[name="postCd"][value="2"] + span, input[name="afterCd"][value="2"] + span{
+    border-color: #FF4830;
+    color: #FF4830;
+}
+input[name="postCd"][value="2"] + span:hover, input[name="postCd"][value="2"]:checked + span,
+input[name="afterCd"][value="2"] + span:hover, input[name="afterCd"][value="2"]:checked + span{
+    border-color: #FF4830;
+    background-color: #FF4830;
     color: #fff;
 }
-.label-radio input[type="radio"]:checked + span{
-    background-color: #007BFF;
-    color: white;
-}
-.label-radio input[value="2"]:checked + span{
-    background-color: #ff3131;
-    color: white;
-}
 
-.input-status .label-radio input[value="1"] + span{
+input[name="postStatus"] + span{
     border-color: #c0cd3d;
     color: #c0cd3d;
 }
-.input-status .label-radio input[value="2"] + span{
-    border-color: #64b752;
-    color: #64b752;
-}
-.input-status .label-radio input[value="1"] + span:hover, .input-status .label-radio input[value="1"]:checked + span{
+input[name="postStatus"] + span:hover, input[name="postStatus"]:checked + span{
+    border-color: #c0cd3d;
     background-color: #c0cd3d;
+    color: white;
+}
+input[name="postStatus"][value="2"] + span{
+    border-color: #35B867;
+    color: #35B867;
+}
+input[name="postStatus"][value="2"] + span:hover, input[name="postStatus"][value="2"]:checked + span{
+    border-color: #35B867;
+    background-color: #35B867;
     color: #fff;
 }
-.input-status .label-radio input[value="2"] + span:hover, .input-status .label-radio input[value="2"]:checked + span{
-    background-color: #64b752;
+input[name="postStatus"][value="3"] + span{
+    border-color: #007BFF;
+    color: #007BFF;
+}
+input[name="postStatus"][value="3"] + span:hover, input[name="postStatus"][value="3"]:checked + span{
+    border-color: #007BFF;
+    background-color: #007BFF;
     color: #fff;
 }
+
+input[name="postCate"] + span, input[name="postAfter"] + span{
+    border-color: #00acbd;
+    color: #00acbd;
+}
+input[name="postCate"] + span:hover, input[name="postCate"]:checked + span,
+input[name="postAfter"] + span:hover, input[name="postAfter"]:checked + span{
+    border-color: #00acbd;
+    background-color: #00acbd;
+    color: #fff;
+}
+/**/
 
 .label-text{
     width: calc(100% - 110px);
@@ -325,8 +351,9 @@ header{
     border: 1px solid #aaa;
     border-radius: 3px;
     line-height: 18px;
-    min-height: 20px;
+    min-height: 22px;
     vertical-align: middle;
+    font-family: 'IBM Plex Sans KR', sans-serif;
 }
 .label-text textarea{
     resize: none;
@@ -336,6 +363,7 @@ header{
 }
 .label-text input[type="text"]{
     width: calc(50% - 75px);
+    min-width: 100px;
 }
 .label-text > span{
     margin: 0 0 0 5px;
@@ -349,9 +377,15 @@ header{
     transition: .3s;
 }
 .input-clear.show{
-    height: 195px;
+    height: 200px;
     opacity: 1;
     overflow: visible;
+}
+.input-clear .label-text.selectbox{
+    display: none;
+}
+.input-clear .label-text.selectbox.on{
+    display: block;
 }
 
 .input-after{
@@ -366,7 +400,8 @@ header{
 
 .modal-btn-wrap{
     display: flex;
-    justify-content: center; 
+    justify-content: center;
+    margin: 10px 0 0;
 }
 .modal-btn{
     min-width: 100px;
@@ -387,6 +422,9 @@ header{
 .ux-select__title{
     font-size: 14px;
     color: #666;
+}
+.ux-select-group__title{
+    font-size: 15px;
 }
 .ux-select-group__elem{
     font-size: 14px;
@@ -443,7 +481,7 @@ header{
     background-color: #f9ffbe;
 }
 .box.delay .box-text{
-    background-color: #8cd77c;
+    background-color: rgba(53,184,103,.8);
 }
 
 /* list table */
@@ -454,11 +492,11 @@ header{
 }
 
 /* table col */
-.col01{width:3%;min-width:34px;}
-.col02{width:12%;min-width:100px;}
+.col01{width:5%;min-width:70px;}
+.col02{width:8%;min-width:102px;}
 .col03{flex:1;}
 .col04{width:8%;min-width:62px;}
-.col05{width:10%;min-width:102px;}
+.col05{width:8%;min-width:102px;}
 .col06{width:8%;min-width:62px;}
 .col07{width:10%;}
 /**/
@@ -649,7 +687,7 @@ header{
 }
 @media screen and (max-width:640px) {
     .container{
-        padding: 205px 0 0;
+        padding: 280px 0 0;
     }
 
     .header-container{
@@ -659,8 +697,13 @@ header{
         position: relative;
     }
     .header-container .item{
+        display: flex;
         width: calc(100% - 60px);
         text-align: left;
+        align-items: center;
+    }
+    .header-container .item:first-of-type{
+        margin: 0 0 10px;
     }
     .header-container .item:last-of-type{
         position: absolute;
@@ -671,12 +714,11 @@ header{
     }
     .header-container .item h1{
         text-align: left;
-        margin: 0 0 5px;
         padding: 0;
         font-size: 20px;
     }
     .header-container .item h2{
-        margin: 0 0 10px;
+        margin: 0 0 0 10px;
         font-size: 16px;
     }
     .header-container .item > p{
@@ -685,19 +727,92 @@ header{
     }
 
     .sidebar{
-        top: 85px;
+        top: 67px;
+        padding: 15px 0;
+        flex-wrap: wrap;
     }
     .sidebar .box{
-        flex: 1;
-        max-width: 130px;
+        width: 50%;
+        margin: 0 0 20px;
+    }
+    .sidebar .box:nth-of-type(n+3){
+        margin: 0;
+    }
+    .box .box-text{
+        margin: 0 auto;
     }
 
     .table-wrap{
         overflow-x: auto;
     }
+    .col05{
+        display: none !important;
+    }
     .post-table .table-head{
+        display: none;
         position: relative !important;
         top: auto !important;
+    }
+    .post-table .table-body .list-wrap{
+        padding: 0 4px;
+        flex-wrap: wrap;
+        background: #f5f5f5;
+        border-radius: 5px;
+        box-shadow: 0px 2px 3px rgba(0,0,0,0.2);
+        position: relative;
+    }
+    .post-table .table-body .list-wrap > p.title{
+        width: calc(100% - 62px);
+        flex: auto;
+        font-weight: 500;
+    }
+    .post-table .table-body .list-wrap > p, .post-table .table-body .list-wrap > div{
+        justify-content: left;
+        background: none;
+        box-shadow: none;
+    }
+    .post-table .table-body .list-wrap > div.col07{
+        position: absolute;
+        top: 0;
+        right: 4px;
+        min-width: 62px;
+    }
+    .post-table .table-body .list-wrap > p.status{
+        background: #ddd;
+        border: 1px solid #ccc;
+        justify-content: center;
+        box-shadow: 0 1px 4px rgba(0,0,0,.2);
+    }
+    .post-table .table-body .list-wrap > p,
+    .post-table .table-body .list-wrap > div,
+    .post-table .table-body .memo > p{
+        margin: 0
+    }
+    .post-table .table-body .memo{
+        padding: 3px 0 0;
+    }
+    .post-table .table-body .memo > p.arrow{
+        min-width: 30px;
+        padding: 2px 0 0;
+    }
+}
+@media screen and (max-width:480px) {
+    .header-container .item > p{
+        font-size: 12px;
+
+    }
+    .post-table .table-body .memo > p > span{
+        display: inline;
+    }
+    .post-table .table-body .memo > p.col03{
+        padding: 6px 30px 0 0;
+        position: relative;
+    }
+    .btn-delete-memo{
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
     }
 }
 @media screen and (max-height:480px){
@@ -708,22 +823,22 @@ header{
 }
 @media screen and (min-width:1025px) and (max-height:480px) {
     .container{
-        padding: 65px 0 0;
+        padding: 72px 0 0;
     }
     .sidebar{
-        top: 105px;
+        top: 120px;
     }
     .post-table .table-head{
-        top: 65px;
+        top: 72px;
     }
     
 }
-@media screen and (max-width:1024px) and (max-height:480px) {
+@media screen and (min-width:641px) and (max-width:1024px) and (max-height:480px) {
     .container{
         padding: 180px 0 0;
     }
     .sidebar{
-        top: 62px;
+        top: 72px;
     }
     .post-table .table-head{
         top: 180px;
