로딩바 추가, 토스트 추가

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -96,14 +96,13 @@ body {
 
 /* loading */
 .loading-wrap{
-    display: none;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 100vw;
     height: 100vh;
-    background: rgba(255,255,255,.9);
+    background: rgba(255,255,255,0);
     z-index: 9999;
 }
 .loading{
